Real time update pt3 likes done